typos and stuff

--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -214,50 +214,40 @@ Our story begins in 1924, when \schon\ studied what would now be called an algeb
 (|\calA|, \app, \cI, \cS, \cK)$ consisting of a set $|\calA|$ equipped with a binary operation
 $\app$ and constants $\cI$, $\cS$ and $\cK$. These were to satisfy the following
 identities:
-\be
-\cI \app a = a,
-\ee
-\be
-(\cK \app a) \app b = a,
-\ee
-\be
-((\cS \app f) \app g) \app c = (f \app c) \app\, (g \app c), 
-%
+\begin{align*}
+\cI \app a &= a,\tag{1}\\
+(\cK \app a) \app b &= a,\tag{2}\\
+((\cS \app f) \app g) \app c &= (f \app c) \app\, (g \app c),\tag{3}
+\end{align*}
+\noindent
+for all elements $a$, $b$, $c$, $f$ and $g$ of $|\calA|$.%
 \footnote{Editor's note: Lambek uses this squiggle $\app$ to denote a binary operation for
 function application. It appears here and in his later book about this same subject. I
 made a best guess about how to translate this into \LaTeX.}
-\ee
-
-\renewcommand*{\thefootnote}{\arabic{footnote}}
-\setcounter{footnote}{0}
-\noindent
-for all elements $a$, $b$, $c$, $f$ and $g$ of $|\calA|$.
 Actually, \schon\ did not employ the language of universal algebra, and he defined $\cI$ in terms of $\cK$ and $\cS$, but of this we shall speak later. His main result would now be stated as follows.
-
+\renewcommand*{\thefootnote}{\arabic{footnote}}
+\setcounter{footnote}{0}%
 \pdfbookmark{Schonfinkel Algebra}{prop1}
 \begin{prop}
-Every polynomial $\varphi(x)$ over a \schon\ algebra $A$ can be written in the form $f \app x$, where $f \in |\calA|$.
+Every polynomial $\varphi(x)$ over a \schon\ algebra $\calA$ can be written in the form $f \app x$, where $f \in |\calA|$.
 \end{prop}
 \noindent
 Polynomials are of course formed as words in an indeterminate $x$ and are subject to the same three identities. 
-More precisely, equality $\eqx$ between polynomials is the smallest equivalence relation $\equiv$ between words in $x$ which has the substitution property
+More precisely, equality $\eqx$ between polynomials is the smallest equivalence relation $\equiv$ between words
+in $x$ which has the substitution property
 \bes
 \inferrule {\varphi(x) \equiv \psi(x) \qquad \alpha(x) \equiv \beta(x)}{\varphi(x) \app \alpha(x) \equiv \psi(x) \app \beta(x)}
 \tag{$0_{X}$}
 \ees
 and which satisfies
-\bes
-\cI \app \alpha(x) \equiv \alpha(x),
-\tag{$1_X$}
-\ees
-\bes
-\tag{$2_X$}
-(K \app \alpha(x))\app\,\beta(x) \equiv \alpha(x)
-\ees
-\bes
-((S\app \varphi(x))\app \psi(x))\app \gamma(x) \equiv (\varphi(x) \app \gamma(x)) \app \, (\psi(x) \app \gamma(x))
+\begin{align*}
+\cI \app \alpha(x) &\equiv \alpha(x),
+\tag{$1_X$}\\
+(K \app \alpha(x))\app\,\beta(x) &\equiv \alpha(x)
+\tag{$2_X$}\\
+((S\app \varphi(x))\app \psi(x))\app \gamma(x) &\equiv (\varphi(x) \app \gamma(x)) \app \, (\psi(x) \app \gamma(x))
 \tag{$3_X$}
-\ees
+\end{align*}
 Alternatively, one may regard the polynomial $\varphi(x)$ as an element of the \schon\
 algebra $\calA[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x : \calA
 \to \calA[x]$ with the usual universal property: for every algebra $B$ every homomorphism $f:
@@ -357,7 +347,7 @@ $$
 \lx(\cI \app\alpha(x)) = \lx \alpha(x).
 $$
 
-Writing $a$ for $\lx \alpha(x)$X we may rewrite this, in view of the unrestricted (iii), as
+Writing $a$ for $\lx \alpha(x)$ we may rewrite this, in view of the unrestricted (iii), as
 $$
 (\cS\app (\cK\app \cI))\app a = a,
 $$
@@ -406,7 +396,7 @@ stipulate the identity
 $$
 (\cS\app (\cK \app b))\app (\cK \app c) = \cK \app (b\app c)
 $$
-for all $b$ and $c$. gain, this is an easy consequence of (4).
+for all $b$ and $c$. Again, this is an easy consequence of (4).
 By the same argument as above, we may replace the stipulated identity
 by the equation
 \bes
@@ -419,11 +409,10 @@ satisfy in addition to the identities (1) to (3).
 \end{proof}
 \pdfbookmark{Lambda Calculus}{prop3}
 From now on we shall write $\lx \varphi(x)$ for the unique $f$ corresponding
-to $\varphi(x)$by Proposition 2, as we did in the proof. The properties of
+to $\varphi(x)$ by Proposition 2, as we did in the proof. The properties of
 the new symbol $\lx$ are embodied in the $\lambda$-calculus of Church (1932).
 The equivalence of the systems of Curry and Church ($\lambda K$-calculus, 1941)
 are summed up as follows.
-\newpage
 
 \begin{prop}The identities and equations of Curry algebras imply and are implied by the following:%
 \footnote{Here $=$ denotes equality in $\calA$, $\calA[x]$, $\calA[x,y]$, etc. simultaneously,
@@ -600,7 +589,7 @@ which deals with implication $\from$, conjuntion $\sland$, and truth $\top$.
 We shall present this as a deductive system, making use of the symbol $\ent$ for entailment,
 in the spirit of Gentzen. Here are our axioms and rules of inference, suitably labelled:
 \bes
-A \xto{1_A} A, \qquad \inferrule{A \xto{f} B\quad B \xto{g} C}{A \xto{gf} C}
+A \xto{1_A} A, \qquad \inferrule{A \xto{f} B\quad B \xto{g} C}{A \xto{gf} C};
 \tag{1}
 \ees
 \bes
@@ -609,7 +598,7 @@ A \xto{0_A} \top;
 \ees
 \bes
 A \sland B \xto{\prAB} A,\,\,A \sland B \xto{\prpAB} B, \quad
-\inferrule{C \xto{f} A\qquad C \xto{g} B}{C \xto{\bracket{f, g}} A \sland B}
+\inferrule{C \xto{f} A\qquad C \xto{g} B}{C \xto{\bracket{f, g}} A \sland B};
 \tag{3}
 \ees
 \bes
@@ -629,13 +618,13 @@ write down the usual reflexive, symmetric, transitive and substitution laws for
 equality. However, we list the following equations, where in $f = g$ it is
 assumed that $f$ and $g$ have the same source and target.
 \begin{enumerate}[align=left]
-\item[($1'$)]$f1_A = f$, $1_Bf = f$, $(hg)f = g(hf)$,
- for all $f:A \to B$, $g:B \to C$, and $h: C\to D$;
+\item[($1'$)]$f1_A = f$, $1_Bf = f$, and $(hg)f = g(hf)$,
+ for all $f:A \to B$, $g:B \to C$, $h: C\to D$;
 \item[($2'$)] $f= 0_A$, for all $f: A \to 1$;
-\item[($3'$)] $\prAB\bracket{f,g} = f$, $\prpAB\bracket{f,g}= g$,
+\item[($3'$)] $\prAB\bracket{f,g} = f$, $\prpAB\bracket{f,g}= g$, and
 $\la\prAB h, \prpAB h\ra = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
-\item[($4'$)] $\ev_{A,B}\bracket{h^*\pr{C,B}, \prp{C,B}} = h$,
-$(\ev_{A,B}\bracket{k^*\pr{C,B}, \prp{C,B}})^* = k$,
+\item[($4'$)] $\ev_{A,B}\bracket{h^*\pr{C,B}, \prp{C,B}} = h$, and
+$(\ev_{A,B}\bracket{k\,\pr{C,B}, \prp{C,B}})^* = k$,
 for all $h: C\sland A \to A$, and $k: C \to A \from B$.
 \end{enumerate}
 \pdfbookmark{Cartesian closed categories}{ccc}
@@ -666,9 +655,9 @@ For future reference, we also note the following consequence of conditions ($1'$
 \ees
 This is proved thus: let $k = \bracket{f,g} h$, then, omitting subscripts, we have
 $$
-\pi k=fh, \pi' k=gh
+\pi k=fh, \,\pi' k=gh
 $$
-by (3) and hence
+by ($3'$) and hence
 $$
 \bracket{fh,gh} = \bracket{\pi k,\pi' k} = k,
 $$
@@ -678,7 +667,7 @@ In the author's opinion, it is a tour de force to present
 propositional logic without conjunction. Curiously, the same tour de force
 is found in the paper by Eilenberg and Kelly, who
 went to some trouble to eliminate the Cartesian product from Cartesian closed categories.
-One could argue that closed cate­ gories without products are essentially the same
+One could argue that closed categories without products are essentially the same
 as typed Curry algebras. It therefore seems reasonable to proceed
 from the study of typed Curry algebras to the study of Cartesian closed categories.
 
@@ -691,11 +680,11 @@ and shall give another exposition of the proof here. The new versions of Proposi
 
 \pdfbookmark{Deduction Theorem}{deduction}
 First, we must explain what it means to adjoin an indeterminate morphism $x: 1 \to A$
-to a Cartesian closed category $\calA$ with A being an object of $\calA$, which we also
+to a Cartesian closed category $\calA$ with $A$ being an object of $\calA$, which we also
 regard as a formula. In the same spirit, we may regard $x$ as an assumption that $\top$ entails $A$.
 The objects of $\calA[x]$ are the same as those of $\calA$, but the morphisms
 $\varphi(x): B \to C$ in $\calA[x]$ may be regarded as proofs that $B$ entails $C$ on
-the assumption $x$. Equality between proofs or polynomials is determined by ($1'$) to($4'$) and is
+the assumption $x$. Equality between proofs or polynomials is determined by ($1'$) to ($4'$) and is
 denoted by $\eqx$. One must check of course that $\calA[x]$ thus constructed has 
 the expected universal property.
 
@@ -752,11 +741,11 @@ there is a unique constant $f: A \times B \to C$ such that $f\bracket{x0_B,1_B} 
 Let us write $\kxa \varphi(x)$ for the constant $f$ which is assigned to the proof $\varphi(x)$
 in the proof of Theorem 1. Thus, when $k$ is a constant, we have:
 \begin{align*}
-\kxa k &= k\prpAB \tag{i}\\
-\kxa x &= k\pr{A,1} \tag{ii}\\
-\kxa \bracket{\psi(x),\chi(x)} &= \bracket{\kxa\psi(x),\kxa\chi(x)} \tag{iii}\\
-\kxa k (\psi(x),\chi(x))&= \kxa\chi(x)\bracket{\prAB, \kxa\psi(x)}\tag{iv}\\
-\kxa (\psi(x)^*) &= (\kxa\psi(x)\alpha_{A,B,D})^* \tag{v}
+\kxa k &= k\prpAB; \tag{i}\\
+\kxa x &= k\pr{A,1}; \tag{ii}\\
+\kxa \bracket{\psi(x),\chi(x)} &= \bracket{\kxa\psi(x),\kxa\chi(x)}; \tag{iii}\\
+\kxa (\psi(x) \chi(x))&= \kxa\chi(x)\bracket{\prAB, \kxa\psi(x)};\tag{iv}\\
+\kxa (\psi(x)^*) &= (\kxa\psi(x)\alpha_{A,B,D})^*, \tag{v}
 \end{align*}
 where (iii), (iv) and (v) are subject to the restriction that $\varphi(x)$ is not constant.
 Note, in particular, the following special case of (iv), in view of (i):
@@ -786,8 +775,8 @@ $\kxa \varphi(x) = \kxa \psi(x)$
 Then it is easily checked that $\equiv$ has the
 substitution property and satisfies all the conditions which
 equality in $\calA[x]$ must satisfy (see the sample calculation below).
-Since $eqx$ is by definition the smallest such equivalence relation, it follows that
-$\eqx$is contained in $\equiv$, that is,
+Since $\eqx$ is by definition the smallest such equivalence relation, it follows that
+$\eqx$ is contained in $\equiv$, that is,
 \bes
 \varphi(x) \eqx \psi(x) \text{ implies } \kxa \varphi(x) = \kxa \psi(x),
 \tag{*}
@@ -816,7 +805,7 @@ so the above
 &= h\alpha\alpha' = h & \hbox { by } & \textrm{($4'$)}.
 \end{align*}
 \footnotetext{Editor's note:
-This third step is a bit mysterious, but remember that
+This third step was a bit mysterious to me. But remember that
 $\pi\alpha = \pi\bracket{\pi\pi,\bracket{\pi\pi',\pi'}} = {\pi\pi}$ and
 $\pi'\alpha = \pi'\bracket{\pi\pi,\bracket{\pi\pi',\pi'}} = \bracket{\pi\pi',\pi'}$. Then
 push all the projection operators through and you get the right answer.}%
