--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -202,7 +202,7 @@ satisfied with these earlier accounts. The present exposition is essentially my
 unscheduled talk at the 1977 Durham Symposium on applications of sheaf theory to logic,
 algebra and analysis.
 
-I regret that limitations of space do not permit a discus­ sion of illative combinatory
+I regret that limitations of space do not permit a discus­sion of illative combinatory
 logic (Curry and Feys, 1958) or combinatory type theory (Church, 1940) and applications
 thereof to the construction of free toposes.
 
@@ -359,8 +359,7 @@ which itself has already been derived from (4).
 In the same manner we may obtain consequences (4.2) and (4.3)
 of (4) which imply ($2_X$) and ($3_X$) respectively.
 We shall not bother to spell them out.%
-\footnote{Editor's note: It's too bad they did not spell out the details here. ($3_X$) would have
-been interesting to see}
+\footnote{Editor's note: It's too bad they did not spell out the details here.}
 We now turn to the uniqueness of $f$ in Proposition 2.
 Suppose also $g\app x \eqx \varphi(x)$, we claim that $g = \lx \varphi(x)$.
 Now, by (*), $\lx (g\app x) = \lx \varphi(x)$, so it suffices to
@@ -522,7 +521,7 @@ is a way of regarding each entity of type $A$ as a proof of the
 formula $A$.
 
 For example, $\cS_{A,B,A}$ is by definition a proof of the axiom
-$((A \from A)\from(B<=A))\from((A\from B)\from A)$
+$((A \from A)\from(B\from A))\from((A\from B)\from A)$
 and $\cKAB$ is by definition a proof of the axiom $(A \from B) \from A$.
 Hence $\cS_{A,B,A} \app \cKAB$ is a proof of the theorem $(A\from A) \from (B\from A)$
 by modus ponens. Again, $\cK_{A,C}$ is a proof of the axiom
@@ -722,7 +721,7 @@ h\bracket{\prAB,g}\bracket{x0_B,1_B} &\eqx \chi(x)\psi(x),\\
 \end{align*}
 where $\alpha_{A,B,D}:(A \sland B)\land D \to A\sland(B \sland D)$ is given by
 $$
-\alpha_{A,B,D} = \bracket{\prAB,\pr{A\sland B,D}\, , \bracket{\prpAB\pr{A\,\sland B,D}\,,
+\alpha_{A,B,D} = \bracket{\prAB\, \pr{A\sland B,D}\, , \bracket{\prpAB\pr{A\,\sland B,D}\,,
 \prp{A\sland B,D}}}
 $$
 The last equation is proved by showing (omitting subscripts)
