--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -248,10 +248,10 @@ and which satisfies
 \end{align*}
 Alternatively, one may regard the polynomial $\varphi(x)$ as an element of the \schon\
 algebra $\calA[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x : \calA
-\to \calA[x]$ with the usual universal property: for every algebra $B$ every homomorphism $f:
+\to \calA[x]$ with the usual universal property: for every algebra $\cal B$ every homomorphism $f:
 \calA \to \calB$ and every element $b\in |\calB|$, there exists a unique homomorphism $f' : \calA[x] \to
 \calB$ such that $f' h_x = f$ and $f' (x) = b$. In the special case when $\calB = \calA$ and $f$
-is the identity homomorphism $\calA \to \calA$, $f'$ is the {\it substitution} homomorphism
+is the identity homomorphism $\calA \to \calA$, and $f'$ is the {\it substitution} homomorphism
 which allows us to replace $x$ in any polynomial by $b$. Similarly, when $\calB=\calA[x]$ and
 $f=h_x$, $f'$ allows us to replace $x$ by $a$ polynomial $\beta(x)$.
 
@@ -492,7 +492,7 @@ In place of the three constants $\cI$, $\cK$ and $\cS$ we adopt three families o
 \begin{enumerate}[align=left]
 \item[(1)]$\qquad \cIA \in A \from A$ such that $\cIA \app a = a$
 \item[(2)]$\qquad \cKAB \in (B \from A) \from A$ such that $(\cKAB\app a)\app b = a$
-\item[(3)]$\qquad \cSABC \in ((C \from A) \from (C \from B)) \from ((A \from B) \from C))$ such that
+\item[(3)]$\qquad \cSABC \in ((A \from C) \from (B \from C)) \from ((A \from B) \from C))$ such that
 $((\cSABC \app f) \app g) \app c = (f \app c) \app (g \app c).$
 \end{enumerate}
 It is assumed here that $a\in A$, $b \in B$, $c\in C$, $f \in (A \from B) \from C$ and $g \in B \from C$.
@@ -516,7 +516,7 @@ Secondly, it should be pointed out that $A \from A$ is usually not
 taken as an axiom, but is deduced from the other two axioms. Nevertheless,
 we prefer to regard it as an axiom here.
 
-Implicit in the the definition of a typed \schon\ algebra
+Implicit in the definition of a typed \schon\ algebra
 is a way of regarding each entity of type $A$ as a proof of the
 formula $A$.
 
@@ -554,7 +554,7 @@ $B \from A$ such that $\varphi(x) \eqx f \app x$.
 In the proof-theoretic interpretation we should regard $x$ as an assumption
 that $A$ holds. Proposition 1 then becomes the usual deduction theorem with an
 extra punch at the end: if $\varphi(x)$ is a proof of $B$ from the assumption $x$
-that $A$ holds, then there is a proof of $B \from A$ without any assumption such
+that $A$ holds, then there is a proof $f$ of $B \from A$ without any assumption such
 that $\varphi(x) \eqx f \app x$.
 
 The extra bit at the end asserts the ``equality'' of two proofs.
