--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -1,4 +1,4 @@
-% !TEX root = lambek-1980-pal.tex
+% !TEX root = lambek-1980-ch.tex
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
@@ -10,7 +10,7 @@
 \usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 %\sloppy
-\raggedbottom
+%\raggedbottom
 \usepackage[leqno]{amsmath}
 
 \pagestyle{plain}
@@ -224,7 +224,9 @@ made a best guess about how to translate this into \LaTeX.}
 \end{align*}
 \noindent
 for all elements $a$, $b$, $c$, $f$ and $g$ of $|\calA|$.
-Actually, \schon\ did not employ the language of universal algebra, and he defined $\cI$ in terms of $\cK$ and $\cS$, but of this we shall speak later. \pdfbookmark{Schonfinkel Algebra}{prop1}%
+Actually, \schon\ did not employ the language of universal algebra, and he defined $\cI$ in
+terms of $\cK$ and $\cS$, but of this we shall speak later. 
+\pdfbookmark{Schonfinkel Algebra}{prop1}%
 His main result would now be stated as follows.
 \begin{prop}
 Every polynomial $\varphi(x)$ over a \schon\ algebra $\calA$ can be written in the form $f \app x$, where $f \in |\calA|$.
@@ -246,10 +248,10 @@ and which satisfies
 ((S\app \varphi(x))\app \psi(x))\app \gamma(x) &\equiv (\varphi(x) \app \gamma(x)) \app \, (\psi(x) \app \gamma(x))
 \tag{$3_X$}
 \end{align*}
-Alternatively, one may regard the polynomial $\varphi(x)$ as an element of the \schon\
-algebra $\calA[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x : \calA
-\to \calA[x]$ with the usual universal property: for every algebra $\cal B$ every homomorphism $f:
-\calA \to \calB$ and every element $b\in |\calB|$, there exists a unique homomorphism $f' : \calA[x] \to
+Alternatively, one may regard the polynomial $\varphi(x)$ as an element of the
+Sch\"on\-finkel algebra $\calA[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x : \calA
+\to \calA[x]$ with the usual universal property: for every algebra $\cal B$, every homomorphism $f:
+\calA \to \calB$, and every element $b\in |\calB|$, there exists a unique homomorphism $f' : \calA[x] \to
 \calB$ such that $f' h_x = f$ and $f' (x) = b$. In the special case when $\calB = \calA$ and $f$
 is the identity homomorphism $\calA \to \calA$, and $f'$ is the {\it substitution} homomorphism
 which allows us to replace $x$ in any polynomial by $b$. Similarly, when $\calB=\calA[x]$ and
@@ -414,6 +416,16 @@ The equivalence of the systems of Curry and Church ($\lambda K$-calculus, 1941)
 are summed up as follows.
 \renewcommand*{\thefootnote}{\arabic{footnote}}%
 \setcounter{footnote}{0}%
+% the start of the proposition here happens near the bottom
+% of a page. these skips will force a page break if needed
+% but if we were close enough to the bottom that TeX would
+% break the page anyway they'll be ignored.
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+\bigskip
 \begin{prop}The identities and equations of Curry algebras imply and are implied by the following:%
 \footnote{Here $=$ denotes equality in $\calA$, $\calA[x]$, $\calA[x,y]$, etc. simultaneously,
 subscripts having been suppressed. It is an equivalence relation subject to the following rules:
