--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -246,7 +246,7 @@ in $x$ which has the substitution property
 and which satisfies
 \begin{align*}
 \cI \app \alpha(x) &\equiv \alpha(x),
-\tag{1\subX\ }\\
+\tag{1\subX}\\
 (K \app \alpha(x))\app\,\beta(x) &\equiv \alpha(x)
 \tag{2\subX}\\
 ((S\app \varphi(x))\app \psi(x))\app \gamma(x) &\equiv (\varphi(x) \app \gamma(x)) \app \, (\psi(x) \app \gamma(x))
@@ -342,11 +342,11 @@ relation $\eqx$.
 
 To prove (*), we write $\varphi(x) \equiv \psi(x)$ for $\lx \varphi(x) = \lx \psi(x)$.
 It is easily seen that $\equiv$ is an equivalence relation between words
-which satisfies (0\subX\/), that is, a congruence relation. If we make sure that $\equiv$
-also satisfies (1\subX\/) to (3\subX\/) it will follow that $\equiv$ contains $\eqx$,
+which satisfies (0\subX), that is, a congruence relation. If we make sure that $\equiv$
+also satisfies (1\subX) to (3\subX) it will follow that $\equiv$ contains $\eqx$,
 and this is what (*) asserts.
 
-To say that $\equiv$ satisfies (1\subX\ ) means that 
+To say that $\equiv$ satisfies (1\subX) means that 
 $$
 \lx(\cI \app\alpha(x)) = \lx \alpha(x).
 $$
@@ -363,7 +363,7 @@ an easy consequence of
 which itself has already been derived from (4).
 
 In the same manner we may obtain consequences (4.2) and (4.3)
-of (4) which imply (2\subX\/) and (3\subX\/) respectively.
+of (4) which imply (2\subX) and (3\subX) respectively.
 We shall not bother to spell them out.%
 \footnote{Editor's note: It's too bad they did not spell out the details here.}
 We now turn to the uniqueness of $f$ in Proposition 2.
@@ -644,16 +644,16 @@ $(\ev_{A,B}\bracket{k\,\pr{C,B}, \prp{C,B}})^* = k$,
 for all $h: C\sland A \to A$, and $k: C \to A \from B$.
 \end{enumerate}
 \pdfbookmark{Cartesian closed categories}{ccc}
-The reader will recognize that (1) and (1\mprime ) define a category.
-Moreover, (2) and (2\mprime ) assert that $\top$
+The reader will recognize that (1) and (1\mprime) define a category.
+Moreover, (2) and (2\mprime) assert that $\top$
 is a terminal object, usually denoted by $1$.
-Furthermore, (3) and (3\mprime ) assert that $A \sland B$ is the Cartesian product
+Furthermore, (3) and (3\mprime) assert that $A \sland B$ is the Cartesian product
 of A and B, usually written $A \times B$.
-Finally, (4) and (4\mprime ) express the fact that $(-) \from B$ is right adjoint to
+Finally, (4) and (4\mprime) express the fact that $(-) \from B$ is right adjoint to
 $(-) \sland B: \calA \to \calA$ , which makes $\from$ an internal hom-functor, the
 usual notation for $A \from B$ being $A^B$.
-(1) to (3) and (1\mprime ) to (3\mprime ) define a {\it Cartesian category},
-(1) to (4) and (1\mprime ) to (4\mprime ) define a {\it Cartesian closed category}.
+(1) to (3) and (1\mprime) to (3\mprime) define a {\it Cartesian category},
+(1) to (4) and (1\mprime) to (4\mprime) define a {\it Cartesian closed category}.
 
 Cartesian closed categories were introduced under this name
 by Eilenberg and Kelly (1966). Lawvere (1969) also pointed out that $\times$
@@ -664,20 +664,20 @@ as part of the structure. In fact, our notion of Cartesian closed category is al
 the category of categories, or the category of graphs for that matter, in much the same way
 that the notion of group is algebraic over the category of sets.
 
-For future reference, we also note the following consequence of conditions (1\mprime ) to (4\mprime ):
+For future reference, we also note the following consequence of conditions (1\mprime) to (4\mprime):
 \bes
 \bracket{f,g}h = \bracket{fh,gh}
-\tag{4\mprime }
+\tag{4\mprime}
 \ees
 This is proved thus: let $k = \bracket{f,g} h$, then, omitting subscripts, we have
 $$
 \pi k=fh, \,\pi' k=gh
 $$
-by (3\mprime ) and hence
+by (3\mprime) and hence
 $$
 \bracket{fh,gh} = \bracket{\pi k,\pi' k} = k,
 $$
-by (3\mprime ) again.
+by (3\mprime) again.
 
 In the author's opinion, it is a tour de force to present
 propositional logic without conjunction. Curiously, the same tour de force
@@ -689,7 +689,7 @@ from the study of typed Curry algebras to the study of Cartesian closed categori
 
 I had proved in 1972 that functional completeness holds for Cartesian closed categories,
 provided that these satisfied a finite set of equations, like those due to Curry,
-and conjec­tured that these equations are already a consequence of (1\mprime ) to (4\mprime ) above,
+and conjec­tured that these equations are already a consequence of (1\mprime) to (4\mprime) above,
 that is, they hold in any Cartesian closed category. I proved this later (1974)
 and shall give another exposition of the proof here. The new versions of Propositions
 1 and 2 will be called Theorems 1 and 2.
@@ -700,7 +700,7 @@ to a Cartesian closed category $\calA$ with $A$ being an object of $\calA$, whic
 regard as a formula. In the same spirit, we may regard $x$ as an assumption that $\top$ entails $A$.
 The objects of $\calA[x]$ are the same as those of $\calA$, but the morphisms
 $\varphi(x): B \to C$ in $\calA[x]$ may be regarded as proofs that $B$ entails $C$ on
-the assumption $x$. Equality between proofs or polynomials is determined by (1\mprime ) to (4\mprime ) and is
+the assumption $x$. Equality between proofs or polynomials is determined by (1\mprime) to (4\mprime) and is
 denoted by $\eqx$. One must check of course that $\calA[x]$ thus constructed has 
 the expected universal property.
 
@@ -778,10 +778,10 @@ a constant $g$. Then
 \begin{align*}
 (\kxa g \,\alpha)^* & = (g\, \pi' \alpha)^* & \hbox to 2em { by \hfil} & \textrm{(i)} & \\
 & = (g\, \beta)^* & \hbox to 2em{ if \hfil}  & \beta = \bracket{\pi'\pi, \pi'} &\\
-& = (\ev\bracket{g^*\pi,\pi'}\beta)^* & \hbox to 2em { by \hfil} & \textrm{(4\mprime )} & \\
-& = (\ev\bracket{g^*\pi\,\beta,\pi'\,\beta})^* & \hbox to 2em { by \hfil} & \textrm{(4\mprime )} & \\
-& = (\ev\bracket{g^*\pi'\pi,\pi'})^* & \hbox to 2em { by \hfil} & \textrm{(3\mprime )} & \\
-& = g^*\pi' & \hbox to 2em { by \hfil} & \textrm{(4\mprime )} & \\
+& = (\ev\bracket{g^*\pi,\pi'}\beta)^* & \hbox to 2em { by \hfil} & \textrm{(4\mprime)} & \\
+& = (\ev\bracket{g^*\pi\,\beta,\pi'\,\beta})^* & \hbox to 2em { by \hfil} & \textrm{(4\mprime)} & \\
+& = (\ev\bracket{g^*\pi'\pi,\pi'})^* & \hbox to 2em { by \hfil} & \textrm{(3\mprime)} & \\
+& = g^*\pi' & \hbox to 2em { by \hfil} & \textrm{(4\mprime)} & \\
 & = \kxa (g^*) & \hbox to 2em { by \hfil} & \textrm{(i)} &
 \end{align*}
 We next show that $\kxa \varphi(x)$ depends only on the polynomial
@@ -815,10 +815,10 @@ so the above
 \begin{align*}
 \ev\bracket{(h\alpha)^* \bracket{\pi,\pi\pi'},\pi'\pi'}
 &= \ev\bracket{(h\alpha)^*\bracket{\pi , \pi\pi'},\pi'\pi'}\alpha\alpha^{-1} \\
-&= \ev\bracket{(h\alpha)^*\bracket{\pi \alpha, \pi\pi'\alpha},\pi'\pi'\alpha}\alpha^{-1} & \hbox { by } & \textrm{(4\mprime )}\\
-&= \ev\bracket{(h\alpha)^*\bracket{\pi \pi, \pi'\pi},\pi'}\alpha^{-1} & \hbox { by } & \textrm{(3\mprime )}\footnotemark\\
-&= \ev\bracket{(h\alpha)^*\pi, \pi'}\alpha^{-1} & \hbox { by } & \textrm{(3\mprime )}\\
-&= h\alpha\alpha' = h & \hbox { by } & \textrm{(4\mprime )}.
+&= \ev\bracket{(h\alpha)^*\bracket{\pi \alpha, \pi\pi'\alpha},\pi'\pi'\alpha}\alpha^{-1} & \hbox { by } & \textrm{(4\mprime)}\\
+&= \ev\bracket{(h\alpha)^*\bracket{\pi \pi, \pi'\pi},\pi'}\alpha^{-1} & \hbox { by } & \textrm{(3\mprime)}\footnotemark\\
+&= \ev\bracket{(h\alpha)^*\pi, \pi'}\alpha^{-1} & \hbox { by } & \textrm{(3\mprime)}\\
+&= h\alpha\alpha' = h & \hbox { by } & \textrm{(4\mprime)}.
 \end{align*}
 \footnotetext{Editor's note:
 This third step was a bit mysterious to me. But remember that
@@ -833,9 +833,9 @@ Suppose $g\bracket{x0_B, 1_B} \eqx \varphi(x)$, then
 &= g  \bracket{\kxa (x0_B), \kxa (1_B)} & \hbox to 2em { by \hfil} & \textrm{(iii)}\\
 &= g  \bracket{\kxa x\bracket{\prAB, \kxa 0_B},  1_B \prpAB} & \hbox to 2em { by \hfil} & \textrm{(iv) and (i)}\\
 &= g  \bracket{\pr{A,1}\bracket{\prAB, 0_B\prpAB},\prpAB}& \hbox to 2em { by \hfil} & \textrm{(ii) and (i)}\\
-&= g  \bracket{\prAB, \prpAB} & \hbox to 2em { by \hfil} & \textrm{(3\mprime )}\\
-&= g 1_{A,b} & \hbox to 2em { by \hfil} & \textrm{(3\mprime )}\\
-&= g  & \hbox to 2em { by \hfil} & \textrm{(1\mprime )}
+&= g  \bracket{\prAB, \prpAB} & \hbox to 2em { by \hfil} & \textrm{(3\mprime)}\\
+&= g 1_{A,b} & \hbox to 2em { by \hfil} & \textrm{(3\mprime)}\\
+&= g  & \hbox to 2em { by \hfil} & \textrm{(1\mprime)}
 \end{align*}
 \end{proof}
 \begin{remark}
