--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -825,7 +825,7 @@ This third step was a bit mysterious to me. But remember that
 $\pi\alpha = \pi\bracket{\pi\pi,\bracket{\pi\pi',\pi'}} = {\pi\pi}$ and
 $\pi'\alpha = \pi'\bracket{\pi\pi,\bracket{\pi\pi',\pi'}} = \bracket{\pi\pi',\pi'}$. Then
 push all the projection operators through and you get the right answer.}%
-We are finally ready to prove the uniqueness of f.
+We are finally ready to prove the uniqueness of $f$.
 Suppose $g\bracket{x0_B, 1_B} \eqx \varphi(x)$, then
 \begin{align*}
 \kxa	\varphi(x) &= \kxa (g\bracket{x0_B, 1_B}) & \hbox to 2em { by \hfil} & \textrm{(*)}\\
