--- a/helpers/fixarxiv-palatino-newpx.tex
+++ b/helpers/fixarxiv-palatino-newpx.tex
@@ -2,7 +2,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[largesc]{newpxtext}
+\usepackage[largesc,looser]{newpxtext}
 \usepackage[smallerops]{newpxmath}
 \usepackage[cal=cm]{mathalfa}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
