--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -694,10 +694,16 @@ that is, they hold in any Cartesian closed category. I proved this later (1974)
 and shall give another exposition of the proof here. The new versions of Propositions
 1 and 2 will be called Theorems 1 and 2.
 
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\setcounter{footnote}{0}%
 \pdfbookmark{Deduction Theorem}{deduction}
 First, we must explain what it means to adjoin an indeterminate morphism $x: 1 \to A$
-to a Cartesian closed category $\calA$ with $A$ being an object of $\calA$, which we also
-regard as a formula. In the same spirit, we may regard $x$ as an assumption that $\top$ entails $A$.
+to a Cartesian closed category $\calA$ with $A$ being an object of $\calA$,%
+\footnote{Editors note: Here he means to construct a new category called $\calA[x]$ as before.
+But the text does not make that very clear. The details of the construction are better explained in
+his 1974 paper.}
+which we also regard as a formula.
+In the same spirit, we may regard $x$ as an assumption that $\top$ entails $A$.
 The objects of $\calA[x]$ are the same as those of $\calA$, but the morphisms
 $\varphi(x): B \to C$ in $\calA[x]$ may be regarded as proofs that $B$ entails $C$ on
 the assumption $x$. Equality between proofs or polynomials is determined by (1\mprime) to (4\mprime) and is
