--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -1,3 +1,4 @@
+%!TEX root = yoneda-speedrun-pal.tex
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
@@ -181,8 +182,9 @@ $f$.
 can always just write $hgf$ if we want. \end{itemize}%
 \end{defn}%
 \ni
-We will call the collection of all arrows from $A$ to $B$ $\Arrows_{\CC}(A, B)$. We will
-usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. People
+To be maximally careful we should write $\Arrows_{\CC}(A, B)$ to mean the collection of all arrows 
+from $A$ to $B$ in a category $\CC$.
+But we will usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. People
 also write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or $\ihom(A, B)$ or just $\CC(A,B)$ to mean
 $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a standard word for
 mappings that preserve some kind of structure. Category theory, and the Yoneda lemma, it
