--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -182,9 +182,11 @@ $f$.
 can always just write $hgf$ if we want. \end{itemize}%
 \end{defn}%
 \ni
-To be maximally careful we should write $\Arrows_{\CC}(A, B)$ to mean the collection of all arrows 
-from $A$ to $B$ in a category $\CC$.
-But we will usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. People
+Given a category $\CC$ and objects $A, B$ in $\CC$ we write 
+$\Arrows_{\CC}(A, B)$ to mean the collection of all arrows 
+from $A$ to $B$ in $\CC$ if we are being maximally careful. In practice
+we will usually write $\Arrows(A,B)$ because the $\CC$ subscript is tedious and
+it's clear what category $A$ and $B$ come from. People
 also write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or $\ihom(A, B)$ or just $\CC(A,B)$ to mean
 $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a standard word for
 mappings that preserve some kind of structure. Category theory, and the Yoneda lemma, it
