--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -40,11 +40,11 @@
 \setcounter{tocdepth}{3}
 \usepackage{amsthm}
 
-\newtheorem{theorem}{Theorem}
+\theoremstyle{definition}
+
+\newtheorem{theorem}{Theorem}[]
 \newtheorem{prop}{Proposition}
 \newtheorem*{corollary}{Corollary}
-
-\theoremstyle{remark}
 \newtheorem{remark}{Remark}
 
 \usepackage[colorlinks=true
@@ -96,7 +96,7 @@ bookmarksopenlevel=10,
 \def\lu{\lambda_u}
 \def\lv{\lambda_v}
 \def\lz{\lambda_z}
-\def\subX{\ensuremath{_X}}
+\def\subX{\ensuremath{_\text{X}}}
 \def\lm#1.#2{\lambda#1.\, #2}
 \def\br#1{[\, #1 \, ]}
 \def\V{V}
