--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -6,6 +6,7 @@
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
 
+\usepackage{amsthm}
 \theoremstyle{definition}
 
 \newtheorem{thm}{Theorem}[]
