--- a/1612.09375-12/BasicCategoryTheory-fancy-eu.tex
+++ b/1612.09375-12/BasicCategoryTheory-fancy-eu.tex
@@ -33,7 +33,8 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[osf, noBBpl, sc]{mathpazo}
+\usepackage[noBBpl, sc]{mathpazo}
+\usepackage{eulervm}
 
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \input geometry
