--- a/1503.09060/LambdaCalculus.tex
+++ b/1503.09060/LambdaCalculus.tex
@@ -4,9 +4,50 @@
 \usepackage{amsmath}
 \pagenumbering{arabic}
 \pagestyle{myheadings}
-\parindent0mm
-\parskip5mm
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[largesc,looser]{newpxtext}
+\usepackage[smallerops]{newpxmath}
+\usepackage[cal=cm]{mathalfa}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \title{A Tutorial Introduction to the Lambda Calculus}
 \author{ Raul  Rojas\thanks{Send corrections or suggestions to rojas@inf.fu-berlin.de}}
 \date{\mbox{Freie Universit\"at Berlin}\\
