--- a/hep-th-9506121/TransF.tex
+++ b/hep-th-9506121/TransF.tex
@@ -134,7 +134,7 @@ is truncated and they suffice to obtain Hawking radiation.
 
 
 
-The theory of black hole evaporation \cite{Hawk} is sore beset with two unsolved
+The theory of black hole evaporation \cite{Hawk} is beset with two unsolved
 dilemmas: \begin{itemize}
 \item[1)] The transplanckian issue \cite{THooft}\cite{Jacobson1}: when deriving
 Hawking radiation in the usual framework of free field theory, one calls upon
