--- a/hep-th-9601064/out.tex
+++ b/hep-th-9601064/out.tex
@@ -18,13 +18,13 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.5in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
