--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -61,8 +61,8 @@ bookmarksopenlevel=10
 }
 
 \date{}
-\def\to{\rightarrow}
-\def\imp{\shortrightarrow}
+\def\to{\longrightarrow}
+\def\imp{\rightarrow}
 \def\iff{\leftrightarrow}
 \def\union{\cup}
 \def\inc{\subseteq}
@@ -192,8 +192,8 @@ example: $\l X^\a .\, \l Y^\b .\, X^\a$ is a construction of $\imp \a \limp (\b 
 
 \subsection{\it 3. Correspondence between derivation and terms}
 
-Clearly the axioms and rules of inference (1.1)–(1.3) of $\PI$ correspond exactly to the rules 
-(2.1)–(2.3) of term formation. A construction of $\G \limp \b$ is clearly also a construction of $\G$, $\ab$
+Clearly the axioms and rules of inference (1.1)--(1.3) of $\PI$ correspond exactly to the rules 
+(2.1)--(2.3) of term formation. A construction of $\G \limp \b$ is clearly also a construction of $\G$, $\ab$
 (thinning); similarly for a permutation of $\G$; and the contraction
 $$
 \inferrule{\G, \a, \ab}{\G, \ab}
@@ -211,7 +211,7 @@ Given any derivation of $\G \imp \b$ in $\PI$ we can find a construction of $\G 
 For an interpretation in ordinary set theory let each propositional variable (i.e., prime type symbol) denote a specific set of basic
 objects. Then every type symbol can be taken to denote a set of things according to the rule: $\a \limp b$ 
 denotes the set of all functions whose domain is a superset of $\a$ and whose range is a subset of $\b$. (According as to whether the superset depends on the function in question, or whether it just depends on $\a$, we get somewhat differing interpretations). 
-The variables of type $\a$ are interpreted as ranging over the set $\a$. It is now clear, by induction on the rules (2.1)–(2.3) of term formation, how each term is to be interpreted as a function of the objects over which its free variables range. Thus the closed terms can be interpreted as a perfectly concrete set of functionals of finite type over the basic objects. This interpretation is used by H. Laüchli in the paper he read at the Summer Conference at Buffalo in 1968: see (Laüchli, 1970) pp. 227–229.
+The variables of type $\a$ are interpreted as ranging over the set $\a$. It is now clear, by induction on the rules (2.1)--(2.3) of term formation, how each term is to be interpreted as a function of the objects over which its free variables range. Thus the closed terms can be interpreted as a perfectly concrete set of functionals of finite type over the basic objects. This interpretation is used by H. Laüchli in the paper he read at the Summer Conference at Buffalo in 1968: see (Laüchli, 1970) pp. 227–-229.
 
 Of course a constructivist would be interested in other interpretations; for example, interpretations related to the {\it calculation}
 of terms (i.e., reduction to irreducible form). It is easy to prove that the terms given above can he reduced to normal 
@@ -300,7 +300,7 @@ We will be concerned mainly with the subsystem $H(\limp, \lor, \forall)$ of Heyt
 
 \subsection{\it 7. Constructions}
 
-Our constructions will be terms built up from prime terms by means of rules of term formation as indicated in (i)–(iv), below. Every term is supplied with a unique type symbol. The numerical terms — namely, the terms belonging to $\HIMP$ --— have type $0$.
+Our constructions will be terms built up from prime terms by means of rules of term formation as indicated in (i)--(iv), below. Every term is supplied with a unique type symbol. The numerical terms — namely, the terms belonging to $\HIMP$ --— have type $0$.
 
 \begin{enumerate}[label=(\roman*)]
 
