--- a/2307.06851/ms.tex
+++ b/2307.06851/ms.tex
@@ -1,11 +1,14 @@
 \PassOptionsToPackage{dvipsnames}{xcolor}
 \PassOptionsToPackage{pagebackref,draft=false}{hyperref}
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 
 %%------ PACKAGES --------
-\usepackage{geometry}
-	\geometry{a4paper, top=3.5cm, bottom=2.5cm, left=3cm, right=3cm}
-	
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+
+
 \usepackage{amsmath} % Enhanced math environments
 \usepackage{amssymb} % Additional math symbols
 \usepackage{amsthm} % Theorem environments
@@ -18,7 +21,6 @@
 	\setenumerate{label=(\roman*), itemsep=0pt, parsep=6pt plus 2pt minus 4pt, partopsep=0pt, topsep=2pt}
 	\setitemize{itemsep=0pt, parsep=6pt plus 2pt minus 4pt, partopsep=0pt, topsep=2pt}
 \usepackage{etoolbox} % Toolbox of programming tools
-\usepackage{fancyhdr} % Custom headers and footers
 \usepackage{graphicx} % Enhanced graphics support
 	\graphicspath{ {./figures/} }
 \usepackage{makecell} % Tabular column heads and multilined cells
@@ -33,8 +35,10 @@
 \usepackage{tikzit} % String diagrams
 	\input{alpha.tikzstyles} % Additional styles for TikZit diagrams
 \usepackage[nottoc]{tocbibind} % Table of contents customization
-\usepackage{txfonts} % Extended font collection
+\usepackage{pxfonts} % Extended font collection
 \usepackage{xcolor} % Color management
+
+\input{../helpers/cmrsum}
 
 \usepackage{hyperref}
 \hypersetup{%
@@ -43,10 +47,13 @@
 	pdfpagelabels,
 	colorlinks,
 	linktocpage,
-	linkcolor=black,
-%	citecolor=black,
-%	urlcolor=myurlcolor,
-	hypertexnames=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue,	hypertexnames=true
 	}
 \renewcommand*{\backref}[1]{$\uparrow$\,#1}
 \usepackage[noabbrev]{cleveref}
@@ -268,12 +275,8 @@
 \makeatother
 
 % Current section in the header https://tex.stackexchange.com/questions/151784/how-to-display-current-section-title-in-header
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[L]{\rightmark}
-\fancyhead[R]{\thepage}
-\renewcommand{\headrulewidth}{0pt}
-\setlength{\headheight}{13.6pt}
+\pagestyle{plain}
+
 
 % Paragraph separation length
 
@@ -316,9 +319,9 @@
 		We leverage a Fixed Point Theorem inspired by a result of Lawvere to establish that universality and negation give rise to unreachability (such as uncomputability).  
 		As such, this work sets the basis for a unified approach to universality and invites the study of further examples within the framework. 
 \end{abstract}
-
+\newpage
 	\tableofcontents
-
+\newpage
 	\setlength{\parskip}{\myparskip}				% Paragraph separation
 	\setlength{\parindent}{0pt}					% Paragraph indentation
 	\setlength{\skip\footins}{2.5em}				% Setting the distance beween text and footnotes
@@ -508,7 +511,7 @@
 		However, some constructions and results, such as the simulator category (\cref{def:simulator_category}) or the existence of fixed points (\cref{thm:fix point sim}), require the additional assumptions of target--context categories with (intrinsic) behaviors.
 	\end{remark}
 
-	\begin{table}[t!]\centering
+	\begin{table}[t!]\centering \small
 		\begin{tabular}{c|c|c|c|c} 
 %			\hline
 			\thead{Name of the \\ preorder}
@@ -548,7 +551,7 @@
 			& \makecell{Any \hyperref[rem:levels_abstraction:i]{TCC}}
 		\\ %\hline 	
 		\end{tabular}
-		\caption{Summary of preorders appearing in our framework. 
+		\caption{\small Summary of preorders appearing in our framework. 
 			The third column gives the set whose elements can be compared with the respective relation.
 			The fourth column tells us whether one needs to specify any additional data in order to construct the preorder relation in question.
 			The last column indicates what is the most general version of our framework (\cref{rem:levels_abstraction}) in which the preorder can be used.}
@@ -2606,7 +2609,7 @@ Given any decomposition of $s$ as in \cref{eq:simulator}, not necessarily satisf
 \end{figure} 
 	
 	\begin{definition}\label{def:TCfunctor}
-		Consider two target--context categories $(\cC, T, C, \mrel)$ and $(\cC',T',C', \mrel')$.
+		Consider two target--context categories $(\cC, T, C, \mrel)$ and $(\cC',T',C', \\ \mrel')$.
 		A \textbf{target--context functor} of type $(\cC, T, C, \mrel) \to (\cC',T',C', \mrel')$ is a strong gs-monoidal functor $F \colon \cC \to \cC'$ which preserves targets, contexts and the behavioral relation.
 		That is, we have
 		\begin{align}
@@ -2963,8 +2966,8 @@ Given any decomposition of $s$ as in \cref{eq:simulator}, not necessarily satisf
 		A lax symmetric monoidal functor $F \colon \cat{C} \to \cat{D}$ between two gs-monoidal categories $\cat{C}$ and $\cat{D}$ is called \textbf{lax gs-monoidal} if the following diagrams commute for any object $A$ of $\cat{C}$:
 		\begin{equation}
 			\begin{tikzcd}
-				F(A) \arrow[rd, "\cop_{F(A)}"'] \arrow[rr, "F(\cop_A)"] &                                              & F(A\otimes A) &  & F(A) \arrow[rr, "F(\discard_A)"] \arrow[rd, "\discard_{F(A)}"'] &                         & F(I_\cat{C}) \\
-																	  & F(A)\otimes F(A) \arrow[ru, "{\psi_{A,A}}"'] &               &  &                                                                 & I_\cat{D} \arrow[ru, "\psi_0"'] &     
+				F(A) \arrow[rd, "\cop_{F(A)}"'] \arrow[rr, "F(\cop_A)"] &                                              & F(A\otimes A) &   F(A) \arrow[rr, "F(\discard_A)"] \arrow[rd, "\discard_{F(A)}"'] &                         & F(I_\cat{C}) \\
+																	  & F(A)\otimes F(A) \arrow[ru, "{\psi_{A,A}}"'] &               &                                                                   & I_\cat{D} \arrow[ru, "\psi_0"'] &     
 				\end{tikzcd}
 		\end{equation}
 		where $I_\cat{C}, I_\cat{D}$ are the monoidal units on $\cat{C}$ and $\cat{D}$, respectively and where $\psi_{A,A}, \psi_0$ are the lax monoidal structure morphisms.
