--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2021-10-25 08:03:44 -0400 
+%% Created for Pete Su at 2023-07-15 08:00:42 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Baez1997,
+	author = {Baez, John},
+	booktitle = {Category Theory and Computer Science~{VII}},
+	date-added = {2023-07-15 07:57:39 -0400},
+	date-modified = {2023-07-15 08:00:42 -0400},
+	doi = {doi.org/10.48550/arXiv.q-alg/9705009},
+	editor = {Moggi, Eugenio and Rosolini, Giuseppe},
+	note = {\href{https://arxiv.org/abs/q-alg/9705009}{q-alg/9705009}},
+	number = 1290,
+	pages = {1--33},
+	publisher = {Springer-Verlag},
+	series = {Lecture Notes in Computer Science},
+	title = {An Introduction to $n$-Categories},
+	url = {https://arxiv.org/abs/q-alg/9705009},
+	year = 1997}
+
+@article{Jackson2001,
+	author = {Jackson, J. D. and Okun, L. B.},
+	date-added = {2023-07-15 07:38:54 -0400},
+	date-modified = {2023-07-15 07:40:09 -0400},
+	doi = {10.1103/RevModPhys.73.663},
+	issue = {3},
+	journal = {Rev. Mod. Phys.},
+	month = {Sep},
+	note = {\href{https://arxiv.org/abs/hep-ph/0012061}{hep-ph/0012061}},
+	numpages = {0},
+	pages = {663--680},
+	publisher = {American Physical Society},
+	title = {Historical roots of gauge invariance},
+	url = {https://link.aps.org/doi/10.1103/RevModPhys.73.663},
+	volume = {73},
+	year = {2001},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/RevModPhys.73.663},
+	bdsk-url-2 = {https://doi.org/10.1103/RevModPhys.73.663}}
 
 @misc{Perrone2019,
 	author = {Paolo Perrone},
