--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,40 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-15 13:33:20 -0400 
+%% Created for Pete Su at 2023-07-15 13:38:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Pierce1991,
+	author = {Pierce, Benjamin C},
+	date-added = {2023-07-15 13:38:07 -0400},
+	date-modified = {2023-07-15 13:38:29 -0400},
+	publisher = {MIT press},
+	title = {{Basic Category Theory for Computer Scientists}},
+	year = {1991}}
+
+@book{Goldblatt2014top,
+	author = {Goldblatt, Robert},
+	date-added = {2023-07-15 13:37:13 -0400},
+	date-modified = {2023-07-15 13:37:40 -0400},
+	publisher = {Elsevier},
+	title = {{Topoi: The Categorial Analysis of Logic}},
+	year = {2014}}
+
+@book{MacLane1994,
+	author = {Saunders {Mac Lane} and Ieke Moerdijk},
+	date-added = {2023-07-15 13:34:07 -0400},
+	date-modified = {2023-07-15 13:34:55 -0400},
+	doi = {10.1007/978-1-4612-0927-0},
+	publisher = {Springer New York},
+	title = {Sheaves in Geometry and Logic},
+	url = {https://doi.org/10.1007%2F978-1-4612-0927-0},
+	year = 1994,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-1-4612-0927-0},
+	bdsk-url-2 = {https://doi.org/10.1007/978-1-4612-0927-0}}
 
 @book{Lambek1986,
 	address = {USA},
@@ -186,9 +214,9 @@
 	year = {2019}}
 
 @book{Maclane1978,
-	author = {Saunders Mac Lane},
+	author = {Saunders {Mac Lane}},
 	date-added = {2021-10-24 09:58:06 -0400},
-	date-modified = {2021-10-25 07:56:08 -0400},
+	date-modified = {2023-07-15 13:35:46 -0400},
 	edition = {2nd},
 	publisher = {Springer},
 	title = {{Categories for the Working Mathematician}},
