--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,58 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-16 09:19:34 -0400 
+%% Created for Pete Su at 2023-07-16 18:01:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{Fourman1977logic,
+	author = {Fourman, Michael P},
+	booktitle = {Studies in Logic and the Foundations of Mathematics},
+	date-added = {2023-07-16 18:01:21 -0400},
+	date-modified = {2023-07-16 18:01:35 -0400},
+	pages = {1053--1090},
+	publisher = {Elsevier},
+	title = {{The Logic of Topoi}},
+	volume = {90},
+	year = {1977}}
+
+@article{Fong2018ACT,
+	author = {Fong, Brendan and Spivak, David I},
+	date-added = {2023-07-16 17:58:39 -0400},
+	date-modified = {2023-07-16 17:59:19 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1803.05316}{arxiv:1803.05316}},
+	title = {Seven sketches in compositionality: An invitation to applied category theory},
+	year = {2018}}
+
+@incollection{Eilenberg1966Closed,
+	author = {Samuel Eilenberg and G. Max Kelly},
+	booktitle = {Proceedings of the Conference on Categorical Algebra},
+	date-added = {2023-07-16 17:57:49 -0400},
+	date-modified = {2023-07-16 17:57:57 -0400},
+	doi = {10.1007/978-3-642-99902-4_22},
+	pages = {421--562},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Closed Categories},
+	url = {https://doi.org/10.1007%2F978-3-642-99902-4_22},
+	year = 1966,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-99902-4_22},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-99902-4_22}}
+
+@book{Eilenberg1966,
+	date-added = {2023-07-16 17:56:43 -0400},
+	date-modified = {2023-07-16 17:57:12 -0400},
+	doi = {10.1007/978-3-642-99902-4},
+	editor = {S. Eilenberg and D. K. Harrison and S. MacLane and H. R{\"o}hrl},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Proceedings of the Conference on Categorical Algebra},
+	url = {https://doi.org/10.1007%2F978-3-642-99902-4},
+	year = 1966,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-99902-4},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-99902-4}}
 
 @article{Eilenberg1945,
 	author = {Eilenberg, Samuel and MacLane, Saunders},
