--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,49 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-17 07:30:53 -0400 
+%% Created for Pete Su at 2023-07-17 18:22:01 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kan1958,
+	author = {Kan, Daniel M},
+	date-added = {2023-07-17 18:21:53 -0400},
+	date-modified = {2023-07-17 18:22:01 -0400},
+	journal = {Transactions of the American Mathematical Society},
+	number = {2},
+	pages = {294--329},
+	title = {Adjoint functors},
+	volume = {87},
+	year = {1958}}
+
+@article{Joyal2008notes,
+	author = {Joyal, Andr{\'e}},
+	date-added = {2023-07-17 18:19:58 -0400},
+	date-modified = {2023-07-17 18:20:17 -0400},
+	journal = {preprint},
+	note = {\href{https://www.math.uchicago.edu/~may/IMA/Joyal.pdf}{PDF}},
+	title = {Notes on quasi-categories},
+	year = {2008}}
+
+@book{Johnstone1977topos,
+	address = {London, UK},
+	author = {Johnstone, Peter T},
+	date-added = {2023-07-17 18:17:05 -0400},
+	date-modified = {2023-07-17 18:18:30 -0400},
+	publisher = {Academic Press},
+	title = {Topos theory},
+	year = {1977}}
+
+@book{Johnstone2002sketches,
+	author = {Johnstone, Peter T},
+	date-added = {2023-07-17 18:16:02 -0400},
+	date-modified = {2023-07-17 18:16:16 -0400},
+	publisher = {Oxford University Press},
+	title = {Sketches of an Elephant: A Topos Theory Compendium: 2 Volumes},
+	year = {2002}}
 
 @book{Jacobs1998,
 	author = {Jacobs, Bart},
@@ -686,8 +723,8 @@
 @misc{JohnstoneMerhle2015,
 	author = {Peter Johnstone},
 	date-added = {2021-10-24 09:26:09 -0400},
-	date-modified = {2021-10-25 07:57:06 -0400},
-	note = {Notes written by David Mehrle},
+	date-modified = {2023-07-17 18:12:41 -0400},
+	note = {Notes written by David Mehrle. \href{https://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}{PDF}},
 	primaryclass = {math.CT},
 	title = {{Category Theory}},
 	url = {http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf},
