--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,89 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-17 18:22:01 -0400 
+%% Created for Pete Su at 2023-07-17 20:03:58 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Landry2005,
+	author = {E. Landry},
+	date-added = {2023-07-17 20:03:48 -0400},
+	date-modified = {2023-07-17 20:03:58 -0400},
+	doi = {10.1093/philmat/nki005},
+	journal = {Philosophia Mathematica},
+	number = {1},
+	pages = {1--43},
+	publisher = {Oxford University Press ({OUP})},
+	title = {Categories in Context: Historical, Foundational, and Philosophical},
+	url = {https://doi.org/10.1093%2Fphilmat%2Fnki005},
+	volume = {13},
+	year = 2005,
+	bdsk-url-1 = {https://doi.org/10.1093%2Fphilmat%2Fnki005},
+	bdsk-url-2 = {https://doi.org/10.1093/philmat/nki005}}
+
+@book{Land2021,
+	author = {Markus Land},
+	date-added = {2023-07-17 20:03:04 -0400},
+	date-modified = {2023-07-17 20:03:04 -0400},
+	doi = {10.1007/978-3-030-61524-6},
+	publisher = {Springer International Publishing},
+	title = {Introduction to Infinity-Categories},
+	url = {https://doi.org/10.1007/978-3-030-61524-6},
+	year = {2021},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-030-61524-6}}
+
+@book{Kelly1982,
+	author = {Kelly, Max},
+	date-added = {2023-07-17 20:00:50 -0400},
+	date-modified = {2023-07-17 20:01:49 -0400},
+	note = {\href{http://www.tac.mta.ca/tac/reprints/articles/10/tr10.pdf}{PDF Reprint}},
+	publisher = {CUP Archive},
+	title = {Basic concepts of enriched category theory},
+	volume = {64},
+	year = {1982}}
+
+@article{Kazhdan2014,
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2014arXiv1401.5656K},
+	archiveprefix = {arXiv},
+	author = {{Kazhdan}, David and {Varshavsky}, Yakov},
+	date-added = {2023-07-17 19:58:53 -0400},
+	date-modified = {2023-07-17 19:59:50 -0400},
+	doi = {10.48550/arXiv.1401.5656},
+	eid = {arXiv:1401.5656},
+	eprint = {1401.5656},
+	journal = {arXiv e-prints},
+	keywords = {Mathematics - Category Theory, Mathematics - Algebraic Geometry, Mathematics - Algebraic Topology},
+	month = jan,
+	note = {\href{https://arxiv.org/abs/1401.5656}{arxiv:1401.5656}},
+	primaryclass = {math.CT},
+	title = {{Yoneda lemma for complete Segal spaces}},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.48550/arXiv.1401.5656}}
+
+@book{Kashiwara2006,
+	author = {Masaki Kashiwara and Pierre Schapira},
+	date-added = {2023-07-17 19:57:31 -0400},
+	date-modified = {2023-07-17 19:57:42 -0400},
+	doi = {10.1007/3-540-27950-4},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Categories and Sheaves},
+	url = {https://doi.org/10.1007%2F3-540-27950-4},
+	year = 2006,
+	bdsk-url-1 = {https://doi.org/10.1007%2F3-540-27950-4},
+	bdsk-url-2 = {https://doi.org/10.1007/3-540-27950-4}}
+
+@book{Kashiwara1990,
+	author = {Kashiwara, Masaki and Schapira, Pierre},
+	date-added = {2023-07-17 19:12:19 -0400},
+	date-modified = {2023-07-17 19:29:27 -0400},
+	publisher = {Springer},
+	title = {{Sheaves on Manifolds}},
+	volume = {292},
+	year = {1990}}
 
 @article{Kan1958,
 	author = {Kan, Daniel M},
