--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,63 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-17 20:03:58 -0400 
+%% Created for Pete Su at 2023-07-17 21:36:55 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Lawvere1966category,
+	author = {Lawvere, F William},
+	booktitle = {Proceedings of the Conference on Categorical Algebra: La Jolla 1965},
+	date-added = {2023-07-17 21:35:34 -0400},
+	date-modified = {2023-07-17 21:35:39 -0400},
+	organization = {Springer},
+	pages = {1--20},
+	title = {The category of categories as a foundation for mathematics},
+	year = {1966}}
+
+@book{Lawvere2009conceptual,
+	author = {Lawvere, F William and Schanuel, Stephen H},
+	date-added = {2023-07-17 21:34:47 -0400},
+	date-modified = {2023-07-17 21:34:53 -0400},
+	publisher = {Cambridge University Press},
+	title = {Conceptual mathematics: a first introduction to categories},
+	year = {2009}}
+
+@article{Lawvere2005elementary,
+	author = {Lawvere, F William and McLarty, Colin},
+	date-added = {2023-07-17 21:32:23 -0400},
+	date-modified = {2023-07-17 21:32:23 -0400},
+	journal = {Reprints in Theory and Applications of Categories},
+	note = {\href{http://www.tac.mta.ca/tac/reprints/articles/11/tr11.pdf}{PDF}},
+	pages = {1--35},
+	title = {An elementary theory of the category of sets (long version) with commentary},
+	volume = {11},
+	year = {2005}}
+
+@article{Lawvere2004Thesis,
+	author = {Lawvere, F William and McLarty, Colin},
+	date-added = {2023-07-17 21:27:39 -0400},
+	date-modified = {2023-07-17 21:33:13 -0400},
+	journal = {Reprints in Theory and Applications of Categories},
+	note = {\href{http://www.tac.mta.ca/tac/reprints/articles/5/tr5.pdf}{PDF}},
+	title = {{Functorial Semantics of Algebraic Theories and Some Algebraic Problems in the context of Functorial Semantics of Algebraic Theories}},
+	volume = {5},
+	year = {2004}}
+
+@article{Lawvere1964elementary,
+	author = {Lawvere, F William},
+	date-added = {2023-07-17 21:27:12 -0400},
+	date-modified = {2023-07-17 21:32:15 -0400},
+	journal = {Proceedings of the national academy of sciences},
+	number = {6},
+	pages = {1506--1511},
+	publisher = {National Acad Sciences},
+	title = {An elementary theory of the category of sets},
+	volume = {52},
+	year = {1964}}
 
 @article{Landry2005,
 	author = {E. Landry},
@@ -786,14 +837,15 @@
 	title = {\href{https://preposterousuniverse.com/wp-content/uploads/2015/08/grtinypdf.pdf}{A No-Nonsense Introduction to General Relativity}},
 	year = {2001}}
 
-@misc{Leinster2016Basic,
+@book{Leinster2016Basic,
 	archiveprefix = {arXiv},
 	author = {Tom Leinster},
 	date-added = {2021-10-24 09:27:15 -0400},
-	date-modified = {2021-10-25 07:58:18 -0400},
+	date-modified = {2023-07-17 21:36:55 -0400},
 	eprint = {1612.09375},
 	note = {\href{https://arxiv.org/abs/1612.09375}{arxiv:1612.09375}},
 	primaryclass = {math.CT},
+	publisher = {arXiv Preprint},
 	title = {{Basic Category Theory}},
 	year = {2016}}
 
